text exercises update

--- a/CodingEventsDemo/appsettings.json
+++ b/CodingEventsDemo/appsettings.json
@@ -8,3 +8,6 @@
   },
   "AllowedHosts": "*"
 }
+"ConnectionStrings": {
+  "DefaultConnection": "server=localhost;userid=coding_events;password=PASSWORD;database=coding_events;"
+}
