--- a/CodingEventsDemo/appsettings.json
+++ b/CodingEventsDemo/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
-"ConnectionStrings": {
-  "DefaultConnection": "server=localhost;userid=coding_events;password=PASSWORD;database=coding_events;"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=coding_events;password=PASSWORD;database=coding_events;"
+  }
 }
