--- a/CodingEventsDemo/CodingEventsDemo.csproj
+++ b/CodingEventsDemo/CodingEventsDemo.csproj
@@ -15,6 +15,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
   </ItemGroup>
 </Project>
