--- a/CodingEventsDemo/CodingEventsDemo.csproj
+++ b/CodingEventsDemo/CodingEventsDemo.csproj
@@ -12,6 +12,7 @@
     <Folder Include="Data\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Views\EventCategory\" />
+	<Folder Include="Views\Tag\"/>
   </ItemGroup>
   <ItemGroup>
     <None Remove="Pomelo.EntityFrameworkCore.MySql" />
